@@ -5,6 +5,7 @@
   * Added first_row and last_row methods to table
   * Added new module PagePopulator with single method populate_page_with
   * Added deprecation warning to the method_missing method on Element.
+  * Added all of the file_field locators
 === 2016-08-02
 * Enhancements
   * Added all of the h5 locators
